--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,80 +1,55 @@
 version: '3.8'
 
 services:
-  app:
-    build:
-      context: .
-      target: final
+  syntextaiapp:
     image: osasdeeon/syntextai:latest
-    container_name: syntextai-app
-    restart: unless-stopped
-    env_file: .env
-    environment:
-      - PORT=3000
-      - ENVIRONMENT=production
-      - LOG_LEVEL=INFO
-      - PYTHONUNBUFFERED=1
-      - PYTHONDONTWRITEBYTECODE=1
+    container_name: syntextaiapp
     ports:
       - "3000:3000"
+    env_file:
+      - .env
     volumes:
-      - app_data:/app/data
-      - ./api/config:/app/api/config:ro
+      - ./api/config:/app/api/config
     networks:
       - syntextai_network
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
     deploy:
       resources:
         limits:
-          cpus: '2'
-          memory: 2G
-        reservations:
-          memory: 1G
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
-
+          memory: 4G  # Limit to 4GB
+          
   worker:
     image: osasdeeon/syntextai:latest
     container_name: syntextai-worker
     command: python -m api.worker
-    restart: unless-stopped
-    env_file: .env
+    env_file:
+      - .env
     environment:
-      - ENVIRONMENT=production
-      - LOG_LEVEL=INFO
-      - PYTHONUNBUFFERED=1
       - MAX_CONCURRENT_TASKS=3
       - POLL_INTERVAL=10
     volumes:
-      - app_data:/app/data
-      - ./api/config:/app/api/config:ro
+      - ./api/config:/app/api/config
     networks:
       - syntextai_network
     deploy:
       resources:
         limits:
-          cpus: '1'
-          memory: 1G
-        reservations:
-          memory: 512M
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+          memory: 2G  # Worker needs less memory than the API
+    restart: unless-stopped
+
+  searxng:
+    image: searxng/searxng:latest
+    container_name: searxng
+    ports:
+      - "8080:8080"
+    volumes:
+      - ./settings.yml:/etc/searxng/settings.yml
+    networks:
+      - syntextai_network
+    deploy:
+      resources:
+        limits:
+          memory: 8G  # Limit to 4GB
 
 networks:
   syntextai_network:
     driver: bridge
-
-volumes:
-  app_data:
-    driver: local
