--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,20 @@ services:
     deploy:
       resources:
         limits:
-          memory: 4G  # Limit to 4GB
+          cpus: '2'
+          memory: 4G
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
           
   worker:
     image: osasdeeon/syntextai:latest
@@ -33,8 +46,14 @@ services:
     deploy:
       resources:
         limits:
-          memory: 2G  # Worker needs less memory than the API
+          cpus: '1'
+          memory: 2G
     restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   searxng:
     image: searxng/searxng:latest
@@ -48,8 +67,23 @@ services:
     deploy:
       resources:
         limits:
-          memory: 8G  # Limit to 4GB
+          cpus: '2'
+          memory: 8G
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 40s
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   syntextai_network:
     driver: bridge
+    driver_opts:
+      com.docker.network.bridge.name: syntextai_network
