--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -6,6 +6,8 @@ services:
       context: .
       dockerfile: Dockerfile
       args:
+        # Frontend environment variables
+        - NODE_ENV=development
         - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
         - REACT_APP_FIREBASE_AUTH_DOMAIN=${REACT_APP_FIREBASE_AUTH_DOMAIN}
         - REACT_APP_FIREBASE_PROJECT_ID=${REACT_APP_FIREBASE_PROJECT_ID}
@@ -15,6 +17,7 @@ services:
         - REACT_APP_STRIPE_API_KEY=${REACT_APP_STRIPE_API_KEY}
         - REACT_APP_STRIPE_SECRET=${REACT_APP_STRIPE_SECRET}
         - REACT_APP_STRIPE_ENDPOINT_SECRET=${REACT_APP_STRIPE_ENDPOINT_SECRET}
+    
     container_name: syntextaiapp-local
     ports:
       - "3000:3000"
@@ -22,18 +25,27 @@ services:
       - .env
     volumes:
       - ./api:/app/api
+      - ./.env:/app/.env
+      # Mount CA certificate for PostgreSQL SSL
+      - ./api/config/ca-certificate.crt:/app/api/config/ca-certificate.crt:ro
     networks:
       - syntextai_network
+    
     deploy:
       resources:
         limits:
+          cpus: '2'
           memory: 4G
+        reservations:
+          memory: 2G
+    restart: unless-stopped
 
   worker:
     build:
       context: .
       dockerfile: Dockerfile
       args:
+        - NODE_ENV=development
         - REACT_APP_FIREBASE_API_KEY=${REACT_APP_FIREBASE_API_KEY}
         - REACT_APP_FIREBASE_AUTH_DOMAIN=${REACT_APP_FIREBASE_AUTH_DOMAIN}
         - REACT_APP_FIREBASE_PROJECT_ID=${REACT_APP_FIREBASE_PROJECT_ID}
@@ -43,35 +55,32 @@ services:
         - REACT_APP_STRIPE_API_KEY=${REACT_APP_STRIPE_API_KEY}
         - REACT_APP_STRIPE_SECRET=${REACT_APP_STRIPE_SECRET}
         - REACT_APP_STRIPE_ENDPOINT_SECRET=${REACT_APP_STRIPE_ENDPOINT_SECRET}
+    
     container_name: syntextai-worker-local
     command: python -m api.worker
     working_dir: /app
-    volumes:
-      - ./api:/app/api
     env_file:
       - .env
     environment:
       - MAX_CONCURRENT_TASKS=3
       - POLL_INTERVAL=10
+      - WHISPER_CACHE_DIR=/root/.cache/whisper
+      # PostgreSQL SSL cert path
+      - DATABASE_SSLROOTCERT=/app/api/config/ca-certificate.crt
+    volumes:
+      - ./api:/app/api
+      - ./.env:/app/.env
+      - ./api/config/ca-certificate.crt:/app/api/config/ca-certificate.crt:ro
     networks:
       - syntextai_network
+    
     deploy:
       resources:
         limits:
+          cpus: '1'
           memory: 2G
-    restart: unless-stopped
-
-  searxng:
-    image: searxng/searxng:latest
-    container_name: searxng-local
-    ports:
-      - "8080:8080"
-    volumes:
-      - ./searxng:/etc/searxng
-    environment:
-      - INSTANCE_NAME=SyntextAI
-    networks:
-      - syntextai_network
+        reservations:
+          memory: 1G
     restart: unless-stopped
 
 networks:
