--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   syntextaiapp:
-    image: osasdeeon/syntextai:latest
+    image: syntextaiapp:latest
     build: .
     container_name: syntextaiapp
     restart: unless-stopped
@@ -27,7 +27,7 @@ services:
         max-file: "3"
           
   worker:
-    image: osasdeeon/syntextai:latest
+    image: syntextaiapp:latest
     container_name: syntextai-worker
     command: python -m api.worker
     env_file:
@@ -35,6 +35,7 @@ services:
     environment:
       - MAX_CONCURRENT_TASKS=3
       - POLL_INTERVAL=10
+      - API_BASE_URL=http://syntextaiapp:3000  # ⬅️ Use service name instead of localhost
     volumes:
       - ./api/config:/app/api/config
     deploy:
