--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -34,6 +34,7 @@ google-api-core>=2.11.0
 google-api-python-client
 google-auth==2.40.3
 google-auth-httplib2
+google-cloud-aiplatform>=1.38.0
 google-cloud-core==2.4.1
 google-cloud-firestore
 google-cloud-storage
@@ -44,7 +45,7 @@ greenlet==3.0.3
 grpcio
 grpcio-status
 grpcio-tools
-google-generativeai
+google-generativeai>=0.8.2
 
 # Whisper and related
 faster-whisper==1.1.0
