Fix youtube_processor.py for Phase 1: - Prevent premature  status with  and detailed error metadata. - Limit chunks in  using  (max 5 per segment). - Strengthen source linking with [MM:SS] timestamps in . - Enhance error handling with segment and transcript metadata. - Validate Whisper dependencies with fallback logging. - Ensure compatibility with  and .

--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -191,3 +191,7 @@ posthog==3.25.0
 ctranslate2==4.6.0
 av==15.0.0
 loguru==0.7.2
+
+# Development dependencies for testing
+pytest>=7.0.0
+pytest-mock>=3.10.0
