--- a/env.example
+++ b/env.example
@@ -14,9 +14,10 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=jgkgkhkh-fbb02.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1234566
 REACT_APP_FIREBASE_APP_ID=1:122345:web:34566
 REACT_APP_POST_HOG_API_KEY=phcfhgjh 
-MISTRAL_API_KEY=jfjgjhjhjh
-OPENAI_API_KEY=sk-proj-gkhkhkhk
-GOOGLE_API_KEY=gjgjhkhkj
+INFERENCE_BASE_URL=https://inference.do-ai
+MODEL_CHAT_ID=openai-gpt-oss-20b 
+MODEL_EMBEDDING_ID=multi-qa-mpnet-base-dot-v1
+MODEL_ACCESS_KEY = SSSDSDSDS
 DATABASE_NAME=gjgkhk
 DATABASE_USER=gjghkhk
 DATABASE_PASSWORD=gjgjhjh-GyYq
@@ -24,7 +25,4 @@ DATABASE_HOST=db-postgresql-tor1-gghgh-do-user-13053452-0.i.db.ondigitalocean.co
 DATABASE_PORT=25060
 DATABASE_SSLMODE=require
 DATABASE_SSLROOTCERT=certs/ca-certificate.crt
-TAVILY_API_KEY=tvly-dev-djgjhjh
-SERVER_SECRET_KEY=fjgjhjh
-SEARXNG_URL=http://localhost:8080/search
 POST_HOG_API_KEY=pghgngdvfhgkg
