--- a/env.example
+++ b/env.example
@@ -15,6 +15,7 @@ REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1234566
 REACT_APP_FIREBASE_APP_ID=1:122345:web:34566
 REACT_APP_POST_HOG_API_KEY=phcfhgjh 
 INFERENCE_BASE_URL=https://inference.do-ai
+DO_EMBEDDINGS_URL= https://url
 MODEL_CHAT_ID=openai-gpt-oss-20b 
 MODEL_EMBEDDING_ID=multi-qa-mpnet-base-dot-v1
 MODEL_ACCESS_KEY = SSSDSDSDS
