--- a/env.example
+++ b/env.example
@@ -14,11 +14,16 @@ REACT_APP_FIREBASE_STORAGE_BUCKET=jgkgkhkh-fbb02.appspot.com
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID=1234566
 REACT_APP_FIREBASE_APP_ID=1:122345:web:34566
 REACT_APP_POST_HOG_API_KEY=phcfhgjh 
+
+# LLM Generation (DigitalOcean)
 INFERENCE_BASE_URL=https://inference.do-ai
-DO_EMBEDDINGS_URL= https://url
 MODEL_CHAT_ID=openai-gpt-oss-20b 
-MODEL_EMBEDDING_ID=multi-qa-mpnet-base-dot-v1
-MODEL_ACCESS_KEY = SSSDSDSDS
+MODEL_ACCESS_KEY=SSSDSDSDS
+
+# Embeddings (Voyage AI)
+DO_EMBEDDINGS_URL=https://api.voyageai.com/v1
+MODEL_EMBEDDING_ID=voyage-3.5-lite
+EMBEDDING_API_KEY=pa-XXXXX
 DATABASE_NAME=gjgkhk
 DATABASE_USER=gjghkhk
 DATABASE_PASSWORD=gjgjhjh-GyYq
